# protobuf

./: .bazelrc  WORKSPACE  protobuf_deps.bzl
java/benchmark/: BUILD.bazel
java/benchmark/src/main/java/com/uber/debugprotobuf/: CVE_2022_3171_ClusterfuzzTest.java  DebugProtobuf.java
java/benchmark/src/main/proto/: benchmark.proto  cve_vulnerable.proto
java/benchmark/src/main/resources/: clusterfuzz-testcase-minimized-ProtobufFuzzer-4671272402944000
java/core/: BUILD.bazel
src/google/protobuf/compiler/java/: enum_field.cc  enum_field.h  field.cc  field.h  map_field.cc  map_field.h  message.cc  message_field.cc  message_field.h  primitive_field.cc  primitive_field.h  string_field.cc  string_field.h
